--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
     <header>
         <nav>
             <div class="container flex-parent">
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Syllabus</a></li>
-                    <li><a href="#"> <img src="./images/logo.svg" alt="logo"></a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
+                <div class="nav-wrapper">
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Syllabus</a></li>
+                        <li><a href="#"> <img src="./images/logo.svg" alt="logo"></a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
             </div>
-            <img src="./images/menu.png" class="menu" alt="menu">
+
+            <img src="./images/menu-white.png" alt="menu" class="menu-pic">
+            </div>
         </nav>
         <section class="header-section">
             <div class="container">
+
                 <h1>your life is WebDev</h1>
                 <div class="wrapper">
                     <p>Whatever the approach to development may be, the final program must satisfy some fundamental
@@ -44,6 +49,7 @@
                         <a href="#"><img src="./images/youtube_fff.svg" alt="youtube"></a>
                     </div>
                 </div>
+
             </div>
         </section>
     </header>
@@ -51,68 +57,78 @@
         <section class="first-section">
             <div class="container flex-parent">
                 <div class="content1">
-                <h2>Rappresent your idea with a smart Design</h2>
-                <p>Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <span class="bold">implementation of build systems</span>, and management of derived artifacts, such as the machine code of computer programs. </p>
-                <a href=# class="button">get started</a>
-            </div>
-            <div class="content2">
-                <img src="./images/content-image-1.png" alt="image1">
-            </div>
+                    <h2>Rappresent your idea with a smart Design</h2>
+                    <p>Tasks accompanying and related to programming include: testing, debugging, source code
+                        maintenance, <span class="bold">implementation of build systems</span>, and management of
+                        derived artifacts, such as the machine code of computer programs. </p>
+                    <a href=# class="button">get started</a>
+                </div>
+                <div class="content2">
+                    <img src="./images/content-image-1.png" alt="image1">
+                </div>
             </div>
         </section>
         <section class="second-section">
             <div class="container flex-parent">
-                <div class="content1">
-            <img src="./images/userpic-wrapper.png" alt="image">
-            <h3>our community</h3>
-            <p>A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language</p>
-        </div>
-        <div class="content2">
-            <div class="clicks">
-                <a href="#"><span class="left-arrow"><</span> 1 / 5 <span class="right-arrow">></span> </a>
+                <div class="second-second-section-wrapper">
+                    <div class="content1">
+                        <img src="./images/userpic-wrapper.png" alt="image">
+                        <h3>our community</h3>
+                        <p>A hacker is any skilled computer expert that uses their technical knowledge to overcome a
+                            problem, but it can also mean a security hacker in common language</p>
+                    </div>
+                    <div class="content2">
+                        <div class="clicks">
+                            <a href="#"><span class="left-arrow">
+                                    << /span> 1 / 5 <span class="right-arrow">></span> </a>
+                        </div>
+                        <div class="slides">
+                            <div class="slider-item"><img src="./images/slider-item-1.png" alt="slider-item-1"></div>
+                            <div class="slider-item"><img src="./images/slider-item-2.png" alt="slider-item-2"></div>
+                            <div class="slider-item"><img src="./images/slider-item-3.png" alt="slider-item-3"></div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="slides">
-                <img src="./images/slider-item-1.png" alt="slider-item-1">
-                <img src="./images/slider-item-2.png" alt="slider-item-2">
-                <img src="./images/slider-item-3.png" alt="slider-item-3">
-            </div>
-        </div>
-        </div>
         </section>
         <section class="third-section">
             <div class="container flex-parent">
                 <div class="content1">
-            <img src="./images/content-image-2.png" alt="image2">
-        </div>
-        <div class="content2">
-            <h2>Implement right Code</h2>
-            <p>These might be considered part of the <span class="bold">programming process</span>, but often the term software development is used for this larger process with the term programming, implementation</p>
-            <a href=# class="button">Learn more</a>
-        </div>
-        </div>
+                    <img src="./images/content-image-2.png" alt="image2">
+                </div>
+                <div class="content2">
+                    <h2>Implement right Code</h2>
+                    <p>These might be considered part of the <span class="bold">programming process</span>, but often
+                        the term software development is used for this larger process with the term programming,
+                        implementation</p>
+                    <a href=# class="button">Learn more</a>
+                </div>
+            </div>
         </section>
         <section class="fourth-section">
             <div class="container center-flex">
-            <h2>sign up for our newsletter</h2>
-            <form action="#">
-            <div class="search">
-                <input type="search" placeholder="E-mail">
-                            </div>
-            <button class="check"></button>
-        </form>
-        </div>
+                <h2>sign up for our newsletter</h2>
+                <form action="#">
+                    <div class="search">
+                        <input type="search" placeholder="E-mail">
+                    </div>
+                    <button class="check"></button>
+                </form>
+            </div>
         </section>
         <section class="fifth-section">
             <div class="container center-flex">
                 <h2>Download the App</h2>
-                <p>Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation.</p>
+                <p>Machine code was the language of early programs, written in the instruction set of the particular
+                    machine, often in binary notation.</p>
                 <div class="buttons">
                     <div class="apple-button">
-                    <button class="icon">apple store</button> <button class="apple"></button>
-                </div>
-                <div class="android-button">
-                    <button class="icon">Play Market</button> <button class="android"></button>
-                </div>
+                        <button class="icon">apple store</button> <button class="apple"></button>
+                    </div>
+                    <div class="android-button">
+                        <button class="icon">Play Market</button> <button class="android"></button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -122,14 +138,14 @@
     <footer>
         <div class="container footer-flex-parent">
             <div class="footer-links">
-            <ul>
-                <li><a href=# class="first-link">Credits</a></li>
-                <li><a href=#>Privacy</a></li>
-                <li><a href=#>Our teams</a></li>
-            </ul>
-        </div>
+                <ul>
+                    <li><a href=# class="first-link">Credits</a></li>
+                    <li><a href=#>Privacy</a></li>
+                    <li><a href=#>Our teams</a></li>
+                </ul>
+            </div>
 
-            <a href="#"> <img src="./images/logo.svg" alt="logo"></a>
+            <a href="#"> <img src="./images/logo.svg" alt="logo" class="footer-logo"></a>
             <p>by TonYem for RSS at 2020</p>
 
         </div>
